# SoftwareThatMatters

./: LICENSE  README.md
data_processing/: README.md  requirements.txt
data_processing/src/: analyser_big_query_python.py  analyser_repology.py  utilities.py
graph_implementation_go/: README.md
graph_implementation_go/cmd/: start.go
graph_implementation_go/graph/: filtering.go  gonum_optimized.go  graph.go  operations.go  simple_optimized.go  utilities.go
graph_implementation_rust_ATTEMPT/: Cargo.toml  README.md
graph_implementation_rust_ATTEMPT/src/: graph.rs  main.rs
